Deploy/K8s/Ingress/k8s-psa-ing-br.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: psa-ingress-bare-metal
  annotations:
    nginx.org/ssl-services: "ocelot-api-gw-spa"
#    nginx.org/rewrites: "serviceName=spa-web rewrite=/"
spec:
  tls:
  - hosts:
    - psa-dev.local
    secretName: psa-dev-local-secret
  rules:
  - host: psa-dev.local
    http:
      paths:
      - path: /WebSPA
        backend:
          serviceName: spa-web
          servicePort: 80
      - path: /api
        backend:
          serviceName: ocelot-api-gw-spa
          servicePort: 5001
